# hunterHearsPy

./: CITATION.cff  README.md  context7.json  pyproject.toml  ruff.toml
.github/workflows/: pypiRelease.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
.serena/memories/instructions/: documentation_conventions.md  python_conventions.md  testing_conventions.md
astTransformations/: windowingFunctions.py
citations/: CITATION.cff
src/hunterHearsPy/: __init__.py  _arrays.py  _fft.py  _io.py  _resample.py  amplitude.py  autoRevert.py  clippingArrays.py  ioAudio.py  theSSOT.py  theTypes.py  windowingFunctions.py  windowingFunctionsTensor.py
tests/: conftest.py  test_amplitude.py  test_autoRevert.py  test_clippingArrays.py  test_labeledAudioData.py  test_spectrogram.py  test_waveform.py  test_windowingFunctions.py
tests/coverage/: .coverage
tests/dataSamples/: testVideo11sec.mkv
